Closed
Bug 505227
Opened 16 years ago
Closed 16 years ago
liboggz fails to compile on MinGW
Categories
(Core :: Audio/Video, defect)
Tracking
()
RESOLVED
FIXED
mozilla1.9.2
Tracking | Status | |
---|---|---|
status1.9.1 | --- | .4-fixed |
People
(Reporter: jacek, Unassigned)
Details
Attachments
(2 files)
21.34 KB,
patch
|
cpearce
:
review+
cajbir
:
review+
|
Details | Diff | Splinter Review |
26.76 KB,
patch
|
cpearce
:
review+
dveditz
:
approval1.9.1.4+
|
Details | Diff | Splinter Review |
User-Agent: Mozilla/5.0 (X11; U; Linux i686; en-US; rv:1.9.1.1) Gecko/20090715 Firefox/3.5.1
Build Identifier:
MinGW compilation uses config_win32.h which causes problems like redefinition of uint8_t. Using config.h fixes the problem. I've decided to make more general fix. I've renamed config.h to config_gcc.h and moved #ifdefs from source files to new config.h that just includes proper config. I've also moved #undef DEBUG to the new config.h. This way we may avoid more modifications of imported files.
Reproducible: Always
Reporter | ||
Comment 1•16 years ago
|
||
Attachment #389466 -
Flags: review?(chris)
Updated•16 years ago
|
Attachment #389466 -
Flags: review?(chris)
Attachment #389466 -
Flags: review?(chris.double)
Attachment #389466 -
Flags: review+
Comment 2•16 years ago
|
||
Comment on attachment 389466 [details] [diff] [review]
Fix
Chris Double should review this, as he wrote the build system for content/media/.
This looks ok to me, we still compile with MSVC with this patch. Although we don't officially support MinGW, your patch makes the build system slightly cleaner.
Updated•16 years ago
|
Component: General → Video/Audio
Product: Firefox → Core
QA Contact: general → video.audio
Target Milestone: --- → mozilla1.9.2
Version: unspecified → Trunk
Updated•16 years ago
|
Attachment #389466 -
Flags: review?(chris.double) → review+
Reporter | ||
Comment 3•16 years ago
|
||
Thanks for the review. Can you please check this patch in?
Keywords: checkin-needed
Comment 4•16 years ago
|
||
Comment 5•16 years ago
|
||
Patch backported to 1.9.1. We require this patch for bug 512327, which is required for bug 512328 which people want on 1.9.1.
Attachment #403696 -
Flags: review+
Attachment #403696 -
Flags: approval1.9.1.4?
Updated•16 years ago
|
Attachment #403696 -
Flags: approval1.9.1.4? → approval1.9.1.4+
Comment 6•16 years ago
|
||
Comment on attachment 403696 [details] [diff] [review]
Patch backported to 1.9.1
Approved for 1.9.1.4, a=dveditz
Comment 7•16 years ago
|
||
Pushed to 1.9.1: http://hg.mozilla.org/releases/mozilla-1.9.1/rev/2b1e86813e36
status1.9.1:
--- → .4-fixed
Comment 8•16 years ago
|
||
I missed "#define inline __inline // MSVC" from config_win32.h in the 1.9.1 push, causing build failure on Windows. Pushed fix: http://hg.mozilla.org/releases/mozilla-1.9.1/rev/aeae5a7d43ba
You need to log in
before you can comment on or make changes to this bug.
Description
•