Bug 505227 - Don't use config_win32.h on MinGW in liboggz. r+cpearce,sr+doublec